# compute-benchmarks

./: .clang-format  .config  .gitignore  CMakeLists.txt  CMakeOptions.cmake  CONTRIBUTING.md  FAQ.md  Jenkinsfile  LICENSE  README.md  TESTS.md  build.bat
source/: CMakeLists.txt  CMakeUtils.cmake
source/benchmarks/: CMakeLists.txt  CMakeMacrosAddBenchmark.cmake
source/benchmarks/algorithm_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/api_overhead_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/atomic_benchmark/: CMakeLists.txt  benchmark_info.cpp  kernel_helper.cpp  kernel_helper.h
source/benchmarks/common/: main.cpp
source/benchmarks/compute_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/cpu_efficiency_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/emu_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/eu_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/gpu_cmds_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/graph_api_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/graph_api_overhead_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/host_function_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/memory_benchmark/: CMakeLists.txt  benchmark_info.cpp  blit_size_assigner.h
source/benchmarks/miscellaneous_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/mpi_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/multiprocess_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/multithread_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/multitile_memory_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/overlap_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/p2p_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/page_fault_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/record_and_replay_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/torch_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/benchmarks/ulls_benchmark/: CMakeLists.txt  benchmark_info.cpp
source/docs_generator/: CMakeLists.txt  data_types.h  helpers.h  main.cpp
source/docs_generator/helpers/: CMakeLists.txt  helpers.h  helpers_additional.h
source/framework/: CMakeLists.txt  benchmark_info.cpp  benchmark_info.h  benchmark_main.cpp  benchmark_main.h  configuration.cpp  configuration.h  gtest_event_listener.h  print_device_info.cpp  print_device_info.h  supported_apis.cpp  supported_apis.h  test_map.h
source/framework/additional/: CMakeLists.txt  additional_configuration.cpp  additional_configuration.h  api_additional.cpp
source/framework/argument/: CMakeLists.txt  argument_container.cpp  argument_container.h  basic_argument.h  bitmap_argument.h  boolean_flag_argument.h  compression_argument.h  long_hex_argument.h  string_argument.h  string_list_argument.h  three_component_uint_argument.h
source/framework/enum/: allocation_measure_mode.h  api.h  api_additional.h  atomic_memory_order.h  atomic_scope.h  buffer_contents.h  data_type.h  device_selection.h  distribution_kind.h  engine.h  event_scope_argument.h  graph_operation_type.h  graph_structure.h  hostptr_reuse_mode.h  image_type.h  kernel_name.h  kernel_submit_pattern.h  map_flags.h  math_operation.h  measurement_type.h  measurement_unit.h  mpi_test.h  mutable_command_flag.h  priority_level.h  profiler_type.h  stream_memory_type.h  test_type.h  tmp_memory_strategy.h  usm_initial_placement.h  usm_memadvise_preferred_location.h  usm_memory_placement.h  usm_runtime_memory_placement.h  work_item_id_usage.h
source/framework/intel_product/: CMakeLists.txt  get_intel_product.h  intel_products.inl
source/framework/l0/: CMakeLists.txt  context_properties.h  extension_properties.h  levelzero.cpp  levelzero.h  null_levelzero.cpp  queue_properties.h
source/framework/ocl/: CMakeLists.txt  cl.h  context_properties.h  function_signatures_ocl.h  opencl.cpp  opencl.h  queue_properties.h
source/framework/omp/: CMakeLists.txt
source/framework/sycl/: CMakeLists.txt  sycl.cpp  sycl.h
source/framework/test_case/: register_test_case.h  test_case.h  test_case_argument_container.cpp  test_case_argument_container.h  test_case_base.cpp  test_case_base.h  test_case_interface.h  test_result.h  (+3 more)
source/kernels/: api_overhead_benchmark_1024bytes_argument.cl  api_overhead_benchmark_2048bytes_argument.cl  api_overhead_benchmark_256bytes_argument.cl  api_overhead_benchmark_512bytes_argument.cl  api_overhead_benchmark_64bytes_argument.cl  api_overhead_benchmark_8bytes_argument.cl  api_overhead_benchmark_eat_time.cl  api_overhead_benchmark_empty_kernel.spv  api_overhead_benchmark_global_consts.cl  api_overhead_benchmark_global_consts.spv  api_overhead_benchmark_indirect_access_kernel.cl  api_overhead_benchmark_indirect_access_kernel.spv  api_overhead_benchmark_multi_arg_kernel.cl  api_overhead_benchmark_multi_arg_kernel.spv  api_overhead_benchmark_write_one.spv  api_overhead_benchmark_write_sum_local.cl  atomic_benchmark_kernel.cl  benchmark_write_multiple.cl  benchmark_write_one.cl  compute_benchmark_single_precision_performance.cl  cpu_efficiency_benchmark_eat_time.cl  emu_benchmark_int64_div.cl  eu_benchmark_perform_math_operation.cl  eu_benchmark_read_after_atomic_write.cl  gpu_cmds_benchmark_empty_kernel.spv  gpu_cmds_benchmark_write_one_global_ids.spv  gpu_cmds_benchmark_write_one_global_ids_with_check.cl  gpu_cmds_benchmark_write_one_global_ids_with_check.spv  graph_api_benchmark_kernel_increment.cl  graph_api_benchmark_kernel_increment.spv  graph_api_benchmark_kernel_multiply.spv  graph_api_benchmark_kernel_sin.spv  graph_api_benchmark_kernel_sum.spv  heat3d_workload.cl  heat3d_workload.spv  memory_benchmark_fill_with_ones.cl  memory_benchmark_stream_memory.spv  mpi_workload_dummy_compute.cl  mpi_workload_dummy_compute.spv  multitile_memory_benchmark_copy_buffer.cl  (+35 more)
source/tools/: CMakeLists.txt
source/workloads/: CMakeLists.txt
(+1162 files in other folders)
